examples/tests/test1.che
// comments
/* comments */
/* nested /* comments */ /*
*/ and more /* comments */ */

// nested function
fn nested1 :: ()
{
    fn nested2 :: ()
    {
        // and even more nested functions
        fn nested3 :: () {}
    }
}

// ...
fn variableDeclarations :: ()
{
    print "Variable Declarations:"
    var b : int
    var c = "hello"
    var d : string = "world"

    // var e // error
    // var e : "" // error
    // var e : // error
    // var e = // error
}
